--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -2,7 +2,8 @@
 @dark-transparent-gray: rgba(140, 150, 160, 0.5);
 @transparent-pink: rgba(255, 68, 136, 0.5);
 
-@white: #fafcfc;
+@white: #fff; // #fafcfc
+@light-gray: #727c86;
 @dark-gray: #323c46;
 
 @green: #2b5;
