--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -11,8 +11,8 @@
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-transparent-gray;
-@syntax-indent-guide-color: @dark-transparent-gray;
-@syntax-invisible-character-color: @dark-gray;
+@syntax-indent-guide-color: @light-gray;
+@syntax-invisible-character-color: @light-gray;
 
 // For find and replace markers
 @syntax-result-marker-color: @dark-gray;
